force-app/main/default/objects/Chat_URL__mdt/Chat_URL__mdt.object-meta.xml
<CustomObject>
    <description>Contains URLs presented by the chat bots to the customer.</description>
    <label>Chat URL</label>
    <pluralLabel>Chat URLs</pluralLabel>
</CustomObject>