force-app/main/default/objects/Chat_URL__mdt/fields/Balance_URL__c.field-meta.xml
<CustomField>
    <fullName>Balance_URL__c</fullName>
    <label>Balance URL</label>
    <type>Url</type>
</CustomField>