force-app/main/default/objects/Chat_URL__mdt/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>