force-app/main/default/objects/Chat_URL__mdt/fields/PA_URL__c.field-meta.xml
<CustomField>
    <fullName>PA_URL__c</fullName>
    <label>PA URL</label>
    <type>Url</type>
</CustomField>