force-app/main/default/objects/Chat_URL__mdt/fields/Return_URL__c.field-meta.xml
<CustomField>
    <fullName>Return_URL__c</fullName>
    <label>Return URL</label>
    <type>Url</type>
</CustomField>